# tresor

./: .gitignore  .scalafmt.conf  .travis.yml  LICENSE  README.md  build.sbt  docker-compose.yaml  docs.sbt  examples.html  index.html  paradox.json  setup.html
.github/workflows/: cli.yml
cli/: Cargo.toml  Dockerfile  README.md  install.sh
cli/src/: config.rs  console.rs  error.rs  main.rs  sync.rs  template.rs  vault.rs
docs/: examples.md  index.md  setup.md
project/: plugins.sbt
search/: search_index.json
src/main/paradox/: examples.md  index.md  setup.md
src/main/scala/com/commercetools/tresor/: Tresor.scala  package.scala
src/main/scala/com/commercetools/tresor/crypto/: AES.scala
src/main/scala/com/commercetools/tresor/vault/: AWS.scala  Authentication.scala  Database.scala  HttpSupport.scala  KV.scala  KV2.scala  SecretEngineProvider.scala  package.scala
src/main/scala/com/drobisch/tresor/: Tresor.scala  package.scala
src/main/scala/com/drobisch/tresor/crypto/: AES.scala
src/main/scala/com/drobisch/tresor/vault/: AWS.scala  Authentication.scala  Database.scala  HttpSupport.scala  KV.scala  SecretEngineProvider.scala  VaultKVProvider.scala  package.scala
src/test/resources/: log4j2.xml
src/test/scala/com/commercetools/tresor/: StepClock.scala  TresorSpec.scala  WireMockSupport.scala
src/test/scala/com/commercetools/tresor/crypto/: AESSpec.scala
src/test/scala/com/drobisch/tresor/: StepClock.scala  TresorSpec.scala  WireMockSupport.scala
src/test/scala/examples/: AWSExample.scala  KVExample.scala
(+12 files in other folders)
