[package]
name = "tresor-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
vaultrs = "0.7"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
home = "0.5"
actix-web = "4"
once_cell = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0"
dialoguer = "0.11"
serde_yaml = "0.9"
minijinja = "1"
